--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,6 +29,7 @@
         <div class="row">
             <div class="col-xs-12">
                 <div  class="text-center">
+                    <button type="button" class="btn btn-primary" onclick="window.location.href='http://localhost:8080/signup';"> Sign Up</button>
                     <button type="button" class="btn btn-primary" onclick="window.location.href='http://localhost:8080/login';"> Login</button>
                 </div>
             </div>
