--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -48,19 +48,20 @@
 <script>
     button = document.getElementById('signup-button');
     button.addEventListener('click', function() {
-        const formData = JSON.stringify({
+        const formData = {
             "username": document.getElementById('inputUsername').value,
             "password": document.getElementById('inputPassword').value,
             "email":  document.getElementById('email').value,
             "name":  document.getElementById('firstname').value + " " + document.getElementById('lastname').value,
             "age":  document.getElementById('age').value,
-        });
+        };
         document.getElementById("signup-form").reset();
         console.log(formData);
+        localStorage.setItem('username', formData.username);
         $.ajax({
             url: "http://localhost:8080/signup",
             type: 'POST',
-            data: formData,
+            data: JSON.stringify(formData),
             contentType: "application/json",
             success: function() {
                 window.location.href = "/home";
