--- a/src/main/resources/templates/user-profile.html
+++ b/src/main/resources/templates/user-profile.html
@@ -9,15 +9,15 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Home</title>
+    <title>BarkPark</title>
 
-    <script type="text/javascript" th:src="@{/js/home.js}"></script>
+    <script type="text/javascript" th:src="@{/js/user-profile.js}"></script>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
 
     <!-- Custom styles for this template -->
-    <link rel="stylesheet" type="text/css" th:href="@{/css/home.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/edit-profile.css}">
 
 </head>
 <body>
@@ -34,8 +34,8 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li><a href="http://localhost:8080/home">Home</a></li>
-                <li class="active"><a href="http://localhost:8080/profile">Add/Remove Dog</a></li>
+                <li class="active"><a href="http://localhost:8080/home">Home</a></li>
+                <li><a href="http://localhost:8080/editProfile">Add/Remove Dog</a></li>
             </ul>
         </div><!--/.nav-collapse -->
     </div>
@@ -43,21 +43,20 @@
 
 <div class="container">
 
-    <div class="barkpark-home">
-        <h1>Home</h1>
-        <p class="lead">Parks near you</p>
+    <div class="main-div">
+        <h1 id="profile-name" th:text="${user.name}"></h1>
+        <p id="profile-username" class="lead" th:text="${user.username}"></p>
+        <p class="small" th:text="'Age: ' + ${user.age}"></p>
 
-        <div id="map"></div>
-        <div id="right-panel">
-            <h2>Results</h2>
-            <ul id="places"></ul>
-            <button id="more">More results</button>
-        </div>
-        <!-- Replace the value of the key parameter with your own API key. -->
-        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBcfcMeUWpD0fzu565FtGLVBE9CsXdnzso&libraries=places&callback=initMap"></script>
+        <p id="dog-list-header" class="lead"></p>
+
+        <ul id="dog-list" class="list-group"></ul>
+
     </div>
 
-    <div class="container"></div>
+    <div id="friend-management" class="container">
+
+    </div>
 
 </div><!-- /.container -->
 
