--- a/src/main/resources/templates/user-profile.html
+++ b/src/main/resources/templates/user-profile.html
@@ -34,7 +34,7 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="http://localhost:8080/home">Home</a></li>
+                <li><a href="http://localhost:8080/home">Home</a></li>
                 <li><a href="http://localhost:8080/editProfile">Add/Remove Dog</a></li>
             </ul>
         </div><!--/.nav-collapse -->
