--- a/src/main/resources/templates/edit-profile.html
+++ b/src/main/resources/templates/edit-profile.html
@@ -16,8 +16,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
-    <script type="text/javascript" th:src="@{/js/edit-profile.js}"></script>
-
     <!-- Custom styles for this template -->
     <link rel="stylesheet" type="text/css" th:href="@{/css/edit-profile.css}">
 
@@ -69,7 +67,7 @@
                         </button>
                     </div>
                     <div class="modal-body">
-                        <form>
+                        <form id="add-dog-form">
                             <div class="form-group">
                                 <h4>Name</h4>
                                 <input id="new-dog-name" class="form-control" placeholder="Name" required autofocus>
@@ -104,10 +102,13 @@
 <!--&lt;!&ndash; Bootstrap core JavaScript-->
 <!--================================================== &ndash;&gt;-->
 <!--&lt;!&ndash; Placed at the end of the document so the pages load faster &ndash;&gt;-->
-<!--<script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ" crossorigin="anonymous"></script>-->
+<script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ" crossorigin="anonymous"></script>
 <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
 
 <script>
+    let userDogs = [[${user.dogs}]];
+    populateDogList(userDogs);
+
     let addDogButton = document.getElementById('add-dog-button');
     let ownerUsername = localStorage.getItem('username');
     console.log(ownerUsername);
@@ -119,6 +120,7 @@
             "age": document.getElementById('new-dog-age').value
         };
         console.log(formData);
+        document.getElementById('add-dog-form').reset();
         $.ajax({
             url: "http://localhost:8080/addDog",
             type: 'POST',
@@ -138,6 +140,91 @@
             }
         });
     });
+
+    function populateDogList(dogs) {
+        if (dogs.length !== 0) {
+            let dogListHeader = document.getElementById('dog-list-header');
+            dogListHeader.textContent = 'All Dogs';
+
+            let dogList = document.getElementById('dog-list');
+
+            for (let i = 0; i < dogs.length; i++) {
+                let dogName = dogs[i].name;
+                let dogData = document.createElement('div');
+
+                let listItem = document.createElement('li');
+                listItem.className = "list-group-item";
+
+                let nameElement = document.createElement('p');
+                nameElement.className = 'lead';
+                nameElement.innerText = dogName;
+
+                let breedElement = document.createElement('p');
+                breedElement.className = 'small';
+                breedElement.innerText = "Breed: " + dogs[i].breed;
+
+                let ageElement = document.createElement('p');
+                ageElement.className = 'small';
+                ageElement.innerText = "Age: " + dogs[i].age;
+
+                let deleteButton = document.createElement('button');
+                deleteButton.id = "remove-dog-button";
+                deleteButton.class = "btn btn-danger";
+                deleteButton.textContent = 'Remove Dog';
+                deleteButton.addEventListener('click', function() {
+                    const formData = {
+                        "ownerUsername": localStorage.getItem('username'),
+                        "name": dogName
+                    };
+                    removeDog(formData);
+                });
+
+                dogData.append(nameElement);
+                dogData.append(breedElement);
+                dogData.append(ageElement);
+                dogData.append(deleteButton);
+
+                listItem.appendChild(dogData);
+
+                dogList.appendChild(listItem);
+            }
+        } else {
+            let dogListHeader = document.getElementById('dog-list-header');
+            dogListHeader.innerHTML = '<em>No dogs added yet!</em>';
+        }
+    }
+
+    function removeDog(data) {
+        $.ajax({
+            url: "http://localhost:8080/removeDog",
+            type: 'DELETE',
+            contentType: "application/json",
+            headers: {
+                'username': localStorage.getItem("username")
+            },
+            data: JSON.stringify(data),
+            success: function() {
+                let userDogs = [[${user.dogs}]];
+                userDogs.pop(data);
+                console.log(userDogs);
+                resetDogList();
+                populateDogList(userDogs);
+            },
+            error: function(jqXHR, textStatus, errorThrown){
+                console.log(jqXHR.status);
+                console.log(textStatus);
+                console.log(errorThrown);
+                // TODO - ERROR HANDLE
+            }
+        });
+    }
+
+    function resetDogList() {
+        let dogList = document.getElementById('dog-list');
+        while(dogList.firstChild) {
+            dogList.removeChild(dogList.firstChild);
+        }
+    }
 </script>
 </body>
 </html>
