--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -49,7 +49,21 @@
 
     <div class="barkpark-home">
         <h1>Home</h1>
-        <p class="lead">Parks near you</p>
+
+        <form id="search-form">
+            <div class="row">
+                <div class="col-xs-12">
+                    <div  class="text-center">
+                        <div class="form-group">
+                            <input id="search-bar" class="form-control" placeholder="Search for friends..." required autofocus>
+                            <button id="search-button" class="btn btn-primary" type="button">Search</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </form>
+
+        <p class="lead">Park Map</p>
 
         <div id="map"></div>
         <div id="right-panel">
