--- a/src/main/resources/templates/user-profile.html
+++ b/src/main/resources/templates/user-profile.html
@@ -48,7 +48,7 @@
     <div class="main-div">
         <h1 id="profile-name" th:text="${user.name}"></h1>
         <div id="friend-management" class="container">
-
+            <button id="friend-button" hidden="true"></button>
         </div>
         <p id="profile-username" class="lead" th:text="'Username: ' + ${user.username}"></p>
         <p class="small" th:text="'Age: ' + ${user.age}"></p>
