integrated in friend search

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -56,7 +56,7 @@
                     <div  class="text-center">
                         <div class="form-group">
                             <input id="search-bar" class="form-control" placeholder="Search for friends..." required autofocus>
-                            <button id="search-button" class="btn btn-primary" type="button">Search</button>
+                            <button id="search-button" class="btn btn-primary" type="button" onclick="findFriendsByName(document.getElementById('search-bar').value);">Search</button>
                         </div>
                     </div>
                 </div>
