--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -19,7 +19,7 @@
 
     <!-- JQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-</head>f
+</head>
 <body>
 
 <div class="container">
