--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -57,7 +57,7 @@
         };
         document.getElementById("signup-form").reset();
         console.log(formData);
-        localStorage.setItem('username', formData.username);
+        sessionStorage.setItem('username', formData.username);
         $.ajax({
             url: "http://localhost:8080/signup",
             type: 'POST',
