--- a/src/main/resources/templates/edit-profile.html
+++ b/src/main/resources/templates/edit-profile.html
@@ -35,10 +35,10 @@
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li><a href="http://localhost:8080/home">Home</a></li>
-                <li class="active"><a href="http://localhost:8080/editProfile">Add/Remove Dog</a></li>
+                <li class="active"><a>Add/Remove Dog</a></li>
                 <li><a id="friend-request-link" href="http://localhost:8080/friendRequests">Friend Requests</a></li>
                 <script>
-                    let username = localStorage.getItem('username');
+                    let username = sessionStorage.getItem('username');
                     document.getElementById('friend-request-link').setAttribute("href", "http://localhost:8080/friendRequests?username=" + username);
                 </script>
             </ul>
