--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -38,7 +38,7 @@
                 <li><a id="edit-profile-link">Add/Remove Dog</a></li>
                 <li><a id="friend-request-link">Friend Requests</a></li>
                 <script>
-                    let username = localStorage.getItem('username');
+                    let username = sessionStorage.getItem('username');
                     document.getElementById('edit-profile-link').setAttribute("href", "http://localhost:8080/editProfile?username=" + username);
                     document.getElementById('friend-request-link').setAttribute("href", "http://localhost:8080/friendRequests?username=" + username);
                 </script>
