--- a/src/main/resources/templates/user-profile.html
+++ b/src/main/resources/templates/user-profile.html
@@ -61,10 +61,10 @@
 </div><!-- /.container -->
 
 <script type="text/javascript" th:inline="javascript">
-    setProfileUsername('[[${user.username}]]');
+    setProfileUsername([[${user.username}]]);
     populateDogList([[${user.dogs}]]);
-    console.log(localStorage.getItem('username'));
-    getFriends('[[${user.username}]]');
+    console.log(sessionStorage.getItem('username'));
+    getFriends([[${user.username}]]);
 </script>
 
 <!--&lt;!&ndash; Bootstrap core JavaScript-->
