--- a/src/main/resources/templates/friends.html
+++ b/src/main/resources/templates/friends.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Friend Requests</title>
+    <title>Friends</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
@@ -36,7 +36,7 @@
             <ul class="nav navbar-nav">
                 <li><a href="http://localhost:8080/home">Home</a></li>
                 <li><a id="edit-profile-link">Add/Remove Dog</a></li>
-                <li class="active"><a>Friend Requests</a></li>
+                <li class="active"><a>Friends</a></li>
                 <script>
                     let username = sessionStorage.getItem('username');
                     document.getElementById('edit-profile-link').setAttribute("href", "http://localhost:8080/editProfile?username=" + username);
@@ -49,7 +49,7 @@
 <div class="container">
 
     <div class="main-div">
-        <h1>Friend Requests</h1>
+        <h1>Friends</h1>
         <h4 id="request-header" class="lead"></h4>
 
         <ul id="request-list" class="list-group"></ul>
@@ -68,11 +68,11 @@
 <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ" crossorigin="anonymous"></script>
 <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
 
-<script type="text/javascript" th:src="@{/js/friend-requests.js}"></script>
+<script type="text/javascript" th:src="@{/js/friends.js}"></script>
 <script type="text/javascript" th:inline="javascript">
-    let friendRequests = [[${userList.users}]];
-    console.log(friendRequests);
-    populateRequestList(friendRequests);
+    let friends = [[${friends.users}]];
+    console.log(friends);
+    populateFriendsList(friends);
 </script>
 </body>
 </html>
