--- a/src/main/resources/templates/edit-profile.html
+++ b/src/main/resources/templates/edit-profile.html
@@ -36,7 +36,8 @@
             <ul class="nav navbar-nav">
                 <li><a href="http://localhost:8080/home">Home</a></li>
                 <li class="active"><a>Add/Remove Dog</a></li>
-                <li><a id="friend-request-link" href="http://localhost:8080/friendRequests">Friend Requests</a></li>
+                <li><a id="friend-request-link">Friend Requests</a></li>
+                <li><a id="friends-link">Friends</a></li>
                 <script>
                     let username = sessionStorage.getItem('username');
                     document.getElementById('friend-request-link').setAttribute("href", "http://localhost:8080/friendRequests?username=" + username);
