--- a/src/main/resources/templates/friends.html
+++ b/src/main/resources/templates/friends.html
@@ -35,11 +35,13 @@
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li><a href="http://localhost:8080/home">Home</a></li>
-                <li><a id="edit-profile-link">Add/Remove Dog</a></li>
+                <li><a id="edit-profile-link">My Profile</a></li>
+                <li><a id="friend-request-link">Friend Requests</a></li>
                 <li class="active"><a>Friends</a></li>
                 <script>
                     let username = sessionStorage.getItem('username');
                     document.getElementById('edit-profile-link').setAttribute("href", "http://localhost:8080/editProfile?username=" + username);
+                    document.getElementById('friend-request-link').setAttribute("href", "http://localhost:8080/friendRequests?username=" + username);
                 </script>
             </ul>
         </div><!--/.nav-collapse -->
