added remove friend button

--- a/src/main/resources/templates/user-profile.html
+++ b/src/main/resources/templates/user-profile.html
@@ -57,6 +57,7 @@
         <h1 id="profile-name" th:text="${user.name}"></h1>
         <div id="friend-management" class="container">
             <button id="friend-button" hidden="true"></button>
+            <button id="unfriend-button" hidden="true"></button>
         </div>
         <p id="profile-username" class="lead" th:text="'Username: ' + ${user.username}"></p>
         <p class="small" th:text="'Age: ' + ${user.age}"></p>
