--- a/src/main/resources/templates/park.html
+++ b/src/main/resources/templates/park.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Friends</title>
+    <title>Users in the Park</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
@@ -51,7 +51,7 @@
 <div class="container">
 
     <div class="main-div">
-        <h1>Friends</h1>
+        <h1>Users in the Park</h1>
         <h4 id="request-header" class="lead"></h4>
 
         <ul id="request-list" class="list-group"></ul>
@@ -70,11 +70,11 @@
 <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ" crossorigin="anonymous"></script>
 <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
 
-<script type="text/javascript" th:src="@{/js/friends.js}"></script>
+<script type="text/javascript" th:src="@{/js/park.js}"></script>
 <script type="text/javascript" th:inline="javascript">
-    let friends = [[${friends.users}]];
-    console.log(friends);
-    populateFriendsList(friends);
+    let peopleInPark = [[${users.users}]];
+    console.log(peopleInPark);
+    populatePeopleInPark(peopleInPark);
 </script>
 </body>
 </html>
