fixed remove friend button

--- a/src/main/resources/templates/edit-profile.html
+++ b/src/main/resources/templates/edit-profile.html
@@ -35,7 +35,7 @@
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li><a href="http://localhost:8080/home">Home</a></li>
-                <li class="active"><a>Add/Remove Dog</a></li>
+                <li class="active"><a>Edit Profile</a></li>
                 <li><a id="friend-request-link">Friend Requests</a></li>
                 <li><a id="friends-link">Friends</a></li>
                 <script>
