--- a/src/main/resources/templates/user-profile.html
+++ b/src/main/resources/templates/user-profile.html
@@ -37,7 +37,7 @@
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li><a href="http://localhost:8080/home">Home</a></li>
-                <li><a href="http://localhost:8080/editProfile">My Profile</a></li>
+                <li><a id="edit-profile-link">My Profile</a></li>
                 <li><a id="friend-request-link">Friend Requests</a></li>
                 <li><a id="friends-link">Friends</a></li>
                 <script>
